--- a/bridal.html
+++ b/bridal.html
@@ -89,7 +89,7 @@
                         <div class="extra-nav header-nav">
                             <div class="extra-cell">
                                 <a href="contact-1.html" class="text-gold px-2" style="font-size: large;">Contact</a>
-                                <a href="javascript:;" class="text-gold px-2" style="font-size: large;">Location</a>
+                                <a href="contact-1.html#location" class="text-gold px-2" style="font-size: large;">Location</a>
                                 
                                 
                             </div>
@@ -194,7 +194,7 @@
   <!-- Row: Pre-Bridal Express -->
   <div class="apsara-row" data-anim="fade-right">
     <div class="apsara-row-media">
-      <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?w=1200&q=80&auto=format&fit=crop" alt="">
+      <img src="images/colarge/bridal.jpg" alt="">
     </div>
     <div class="apsara-row-content">
       <h3>Pre-Bridal Express Package</h3>
@@ -213,7 +213,7 @@
   <!-- Row: Pre-Bridal 5 Days Before -->
   <div class="apsara-row reverse" data-anim="fade-left">
     <div class="apsara-row-media">
-      <img src="https://images.unsplash.com/photo-1525034475138-5b4b8c9f9a6a?w=1200&q=80&auto=format&fit=crop" alt="">
+      <img src="images/colarge/bridal1.jpg" alt="">
     </div>
     <div class="apsara-row-content">
       <h3>Pre-Bridal Premium (5 Days Before)</h3>
@@ -232,7 +232,7 @@
   <!-- Row: Bride & Groom Exclusive -->
   <div class="apsara-row" data-anim="zoom-in">
     <div class="apsara-row-media">
-      <img src="https://images.unsplash.com/photo-1517433456452-f9633a875f6f?w=1200&q=80&auto=format&fit=crop" alt="">
+      <img src="images/colarge/groom.jpg" alt="">
     </div>
     <div class="apsara-row-content">
       <h3>Bride & Groom Exclusive Package</h3>
@@ -251,7 +251,7 @@
   <!-- Row: Makeup Styling -->
   <div class="apsara-row reverse" data-anim="fade-up">
     <div class="apsara-row-media">
-      <img src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?w=1200&q=80&auto=format&fit=crop" alt="">
+      <img src="images/colarge/makeup.jpg" alt="">
     </div>
     <div class="apsara-row-content">
       <h3>Makeup & Styling Add-ons</h3>
@@ -270,7 +270,7 @@
   <!-- Row: Custom Trials -->
   <div class="apsara-row" data-anim="slide-up">
     <div class="apsara-row-media">
-      <img src="https://images.unsplash.com/photo-1506086679523-4f4b7d9e3a6a?w=1200&q=80&auto=format&fit=crop" alt="">
+      <img src="images/colarge/makeup1.jpg" alt="">
     </div>
     <div class="apsara-row-content">
       <h3>Custom Packages & Trials</h3>
@@ -406,7 +406,7 @@
             <div class="footer-bottom">
               <div class="container">
                 <div class="wt-footer-bot-left d-flex justify-content-between">
-                    <span class="copyrights-text">Copyright © 2019 Thewebmax</span>
+                    <span class="copyrights-text">Copyright © 2026 Apsara</span>
                     <ul class="copyrights-nav"> 
                         <li><a href="javascript:void(0);">Terms  &amp; Condition</a></li>
                         <li><a href="javascript:void(0);">Privacy Policy</a></li>
