--- a/hairstyling.html
+++ b/hairstyling.html
@@ -89,7 +89,7 @@
                         <div class="extra-nav header-nav">
                             <div class="extra-cell">
                                 <a href="contact-1.html" class="text-gold px-2" style="font-size: large;">Contact</a>
-                                <a href="javascript:;" class="text-gold px-2" style="font-size: large;">Location</a>
+                                <a href="contact-1.html#location" class="text-gold px-2" style="font-size: large;">Location</a>
                                 
                                 
                             </div>
@@ -187,7 +187,7 @@
             <!-- INTRO -->
 <section class="section fade">
     <div class="flex">
-        <img src="images/service/OIP.jpeg" alt="Hair Styling">
+        <img src="images/colarge/hairstyle.jpg" alt="Hair Styling">
         <div class="text">
             <h2>Professional Hair Styling</h2>
             <p>
@@ -203,7 +203,7 @@
 <section class="section fade">
     <h2>Hair Coloring</h2>
     <div class="flex reverse">
-        <img src="images/home/haircolor.jpg" alt="Hair Coloring">
+        <img src="images/colarge/haircolour.jpg" alt="Hair Coloring">
         <p>
             Elevate your look with soft natural blends like balayage and ombre, or go bold with fashion 
             shades and global coloring. Our ammonia-free options ensure healthy, shiny, and beautifully toned hair.
@@ -215,7 +215,7 @@
 <section class="section fade">
     <h2>Cut & Style</h2>
     <div class="flex">
-        <img src="images/home/haircut.jpg" alt="Hair Cutting">
+        <img src="images/colarge/haircut.jpg" alt="Hair Cutting">
         <p>
             From simple trims to advanced fashion cuts, we offer styles that enhance your personality.  
             Our stylists specialize in modern trends including layers, feathering, wolf cuts, butterfly cuts, 
@@ -230,7 +230,7 @@
 <section class="section fade">
     <h2>Hair Treatments</h2>
     <div class="flex reverse">
-        <img src="images/home/hairtreatment.jpg" alt="Hair Treatment Services">
+        <img src="images/colarge/hairtreat.jpg" alt="Hair Treatment Services">
         <p>
             Nourish your hair with premium treatments like smoothing, keratin, botox, and nanoplastia.  
             These services reduce frizz, repair damage, enhance shine, and make your hair soft & manageable.
@@ -242,7 +242,7 @@
 <section class="section fade">
     <h2>Hair Styling & Treatments</h2>
     <div class="flex">
-        <img src="images/service/OIP.jpeg" alt="Hair Spa and Styling">
+        <img src="images/home/hairtreatment.jpg" alt="Hair Spa and Styling">
         <p>
             Whether you're looking for glamorous curls, silky straight hair, or deep nourishment—our 
             combined styling and treatment services give you everything you need for healthy, beautiful hair.
