--- a/massage&wellness.html
+++ b/massage&wellness.html
@@ -89,7 +89,7 @@
                         <div class="extra-nav header-nav">
                             <div class="extra-cell">
                                 <a href="contact-1.html" class="text-gold px-2" style="font-size: large;">Contact</a>
-                                <a href="javascript:;" class="text-gold px-2" style="font-size: large;">Location</a>
+                                <a href="contact-1.html#location" class="text-gold px-2" style="font-size: large;">Location</a>
                                 
                                 
                             </div>
@@ -193,7 +193,7 @@
   <!-- Row 1 -->
   <div class="apsara-row">
     <div class="apsara-row-media">
-      <img src="https://i.imgur.com/kqBcGfP.jpeg" alt="Aroma Body Massage">
+      <img src="images/colarge/Aroma Body Massage.jpg" alt="Aroma Body Massage">
     </div>
     <div class="apsara-row-content">
       <h3>Aroma Body Massage (60 mins)</h3>
@@ -205,7 +205,7 @@
   <!-- Row 2 -->
   <div class="apsara-row reverse">
     <div class="apsara-row-media">
-      <img src="https://i.imgur.com/iDvDajz.jpeg" alt="Deep Tissue Massage">
+      <img src="images/colarge/Deep Tissue Massage.jpg" alt="Deep Tissue Massage">
     </div>
     <div class="apsara-row-content">
       <h3>Deep Tissue Massage (60 mins)</h3>
@@ -217,7 +217,7 @@
   <!-- Row 3 -->
   <div class="apsara-row">
     <div class="apsara-row-media">
-      <img src="https://i.imgur.com/Es32xKR.jpeg" alt="Normal & Full Body Massage">
+      <img src="images/colarge/Normal  Full Body Massage.jpg" alt="Normal & Full Body Massage">
     </div>
     <div class="apsara-row-content">
       <h3>Normal / Full Body Massage (45 mins)</h3>
@@ -233,7 +233,7 @@
   <!-- Row 4 -->
   <div class="apsara-row reverse">
     <div class="apsara-row-media">
-      <img src="https://i.imgur.com/F2D6G7Z.jpeg" alt="Body Polishing">
+      <img src="images/colarge/Body Polishing.jpg" alt="Body Polishing">
     </div>
     <div class="apsara-row-content">
       <h3>Body Polishing (45 mins)</h3>
@@ -245,7 +245,7 @@
   <!-- Row 5 -->
   <div class="apsara-row">
     <div class="apsara-row-media">
-      <img src="https://i.imgur.com/lzTib4k.jpeg" alt="Chakra Massage & Foot Reflexology">
+      <img src="images/colarge/footmassage.jpg" alt="Chakra Massage & Foot Reflexology">
     </div>
     <div class="apsara-row-content">
       <h3>Chakra Body Massage & Foot Reflexology</h3>
@@ -261,7 +261,7 @@
   <!-- Row 6 -->
   <div class="apsara-row reverse">
     <div class="apsara-row-media">
-      <img src="https://i.imgur.com/9Jk5al8.jpeg" alt="Cupping & Marmam Massage">
+      <img src="images/colarge/Cupping Massage.jpg" alt="Cupping & Marmam Massage">
     </div>
     <div class="apsara-row-content">
       <h3>Cupping Massage & Marmam Body Massage</h3>
@@ -273,7 +273,7 @@
   <!-- Row 7 -->
   <div class="apsara-row">
     <div class="apsara-row-media">
-      <img src="https://i.imgur.com/TqG1wUu.jpeg" alt="Three Prakriti Massage">
+      <img src="images/colarge/Prakriti Massage.jpg" alt="Three Prakriti Massage">
     </div>
     <div class="apsara-row-content">
       <h3>Three Prakriti Massage (Vata • Pitta • Kapha)</h3>
@@ -285,7 +285,7 @@
   <!-- Row 8 -->
   <div class="apsara-row reverse">
     <div class="apsara-row-media">
-      <img src="https://i.imgur.com/k8Wnhzp.jpeg" alt="Mud Pack Therapy">
+      <img src="images/colarge/Mud Pack.jpg" alt="Mud Pack Therapy">
     </div>
     <div class="apsara-row-content">
       <h3>Mud Pack Therapy</h3>
@@ -429,7 +429,7 @@
             <div class="footer-bottom">
               <div class="container">
                 <div class="wt-footer-bot-left d-flex justify-content-between">
-                    <span class="copyrights-text">Copyright © 2019 Thewebmax</span>
+                    <span class="copyrights-text">Copyright © 2026 Apsara</span>
                     <ul class="copyrights-nav"> 
                         <li><a href="javascript:void(0);">Terms  &amp; Condition</a></li>
                         <li><a href="javascript:void(0);">Privacy Policy</a></li>
