--- a/services-1.html
+++ b/services-1.html
@@ -89,7 +89,7 @@
                         <div class="extra-nav header-nav">
                             <div class="extra-cell">
                                 <a href="contact-1.html" class="text-gold px-2" style="font-size: large;">Contact</a>
-                                <a href="javascript:;" class="text-gold px-2" style="font-size: large;">Location</a>
+                                <a href="contact-1.html#location" class="text-gold px-2" style="font-size: large;">Location</a>
                                 
                                 
                             </div>
@@ -660,7 +660,7 @@
             <div class="footer-bottom">
               <div class="container">
                 <div class="wt-footer-bot-left d-flex justify-content-between">
-                    <span class="copyrights-text">Copyright © 2019 Thewebmax</span>
+                    <span class="copyrights-text">Copyright © 2026 Apsara</span>
                     <ul class="copyrights-nav"> 
                         <li><a href="javascript:void(0);">Terms  &amp; Condition</a></li>
                         <li><a href="javascript:void(0);">Privacy Policy</a></li>
