--- a/Faq.html
+++ b/Faq.html
@@ -87,7 +87,7 @@
                         <div class="extra-nav header-nav">
                             <div class="extra-cell">
                                 <a href="contact-1.html" class="text-gold px-2" style="font-size: large;">Contact</a>
-                                <a href="javascript:;" class="text-gold px-2" style="font-size: large;">Location</a>
+                                <a href="contact-1.html#location" class="text-gold px-2" style="font-size: large;">Location</a>
                                 
                                 
                             </div>
