--- a/index.html
+++ b/index.html
@@ -2047,7 +2047,7 @@ you a unique result. We will provide you with the highest quality of our service
                                             
                                                 <div class="item">
                                                     <div class="wt-box instagram-box-1">
-                                                        <div class="instagram-box-media"><img src="images/insta/haircut.jpg" alt=""></div>
+                                                        <div class="instagram-box-media"><img src="images/colarge/haircut.jpg" alt=""></div>
                                                         <div class="instagram-box-info  text-center">
                                                         	<a href="javascript:;" class="text-white">
                                                                 <i class="fa fa-instagram"></i>      
@@ -2207,8 +2207,8 @@ you a unique result. We will provide you with the highest quality of our service
                                 <h4 class="widget-title">Contact Us</h4>
                                   <ul class="widget_address"> 
                                   	<li><i class="fa fa-map-marker"></i>Bashyam circle, 309 /43, 1st floor 20th main, 59th Cross Rd, Rajajinagar, Bengaluru, Karnataka 560010</li>
-                                    <li><i class="fa fa-envelope"></i> address-apsaraunisexsalon2025@gmail.com</li>
-                                    <li> <i class="fa fa-phone"></i>(+91) 099169 88766</li>
+                                    <li><i class="fa fa-envelope"></i> apsaraunisexsalon2025@gmail.com</li>
+                                    <li> <i class="fa fa-phone"></i>(+91) 99169 88766</li>
                                 </ul>  
                             </div>           
                         </div>
@@ -2225,7 +2225,6 @@ you a unique result. We will provide you with the highest quality of our service
                     <ul class="copyrights-nav"> 
                         <li><a href="javascript:void(0);">Terms  &amp; Condition</a></li>
                         <li><a href="javascript:void(0);">Privacy Policy</a></li>
-                        <li><a href="contact-1.html">Contact Us</a></li>
                     </ul>     
                 </div>
               </div>   
