--- a/threading.html
+++ b/threading.html
@@ -355,8 +355,8 @@
                                 <h4 class="widget-title">Contact Us</h4>
                                   <ul class="widget_address"> 
                                   	<li><i class="fa fa-map-marker"></i>Bashyam circle, 309 /43, 1st floor 20th main, 59th Cross Rd, Rajajinagar, Bengaluru, Karnataka 560010</li>
-                                    <li><i class="fa fa-envelope"></i> address-apsaraunisexsalon2025@gmail.com</li>
-                                    <li> <i class="fa fa-phone"></i>(+91) 099169 88766</li>
+                                    <li><i class="fa fa-envelope"></i> apsaraunisexsalon2025@gmail.com</li>
+                                    <li> <i class="fa fa-phone"></i>(+91) 99169 88766</li>
                                 </ul>  
                             </div>           
                         </div>
