--- a/hairstyling.html
+++ b/hairstyling.html
@@ -110,7 +110,7 @@
                                 </li>
                                 <li><a href="about-1.html">About us</a>
                                 <!-- <li><a href="about-1.html">About</a></li> -->
-                                <li><a href="services-1.html">Our Services</a>
+                                <li><a href="">Our Services</a>
                                     <ul class="sub-menu">
                                         <li><a href="hairstyling.html">Hair Services</a></li>                                        
                                         <li><a href="nailservice.html">Nail Service</a></li>                                        
@@ -130,6 +130,9 @@
                                         <li><a href="blog-list-sidebar.html">Blog List</a></li>
                                         <li><a href="blog-post-right-sidebar.html">Blog Post</a></li>
                                     </ul>                                 -->
+                                </li>   
+                                 <li><a href="contact-1.html">Contact Us</a>
+                                                             
                                 </li>                                                                
                                 <!-- <li>
                                     <a href="javascript:;">Pages</a>
@@ -159,7 +162,7 @@
         <div class="page-content">
         
             <!-- INNER PAGE BANNER -->
-            <div class="wt-bnr-inr overlay-wraper bg-center" style="background-image:url(images/banner/2.jpg);">
+            <div class="wt-bnr-inr overlay-wraper bg-center" style="background-image:url(images/banner/hairbanner.jpg);">
             	<div class="overlay-main site-bg-secondry opacity-07"></div>
                 <div class="container">
                     <div class="wt-bnr-inr-entry">
@@ -191,9 +194,7 @@
         <div class="text">
             <h2>Professional Hair Styling</h2>
             <p>
-                Our salon offers a complete range of hairstyling services crafted to enhance your natural 
-                beauty. With trained stylists, premium products, and a personalized approach, we help you 
-                achieve the perfect look for everyday style, events, photoshoots, and complete makeovers.
+                At Apsara Salon, our hairstyling services add elegance and charm to every occasion with expert techniques and creativity. From soft curls and sleek straightening to bridal updos and party-ready styles, we craft looks that perfectly match your outfit and personality. Our stylists use professional tools and premium products to ensure long-lasting hold and flawless finish. Step into Apsara Salon and leave with a beautifully styled look that turns every moment into a highlight.
             </p>
         </div>
     </div>
@@ -205,8 +206,7 @@
     <div class="flex reverse">
         <img src="images/colarge/haircolour.jpg" alt="Hair Coloring">
         <p>
-            Elevate your look with soft natural blends like balayage and ombre, or go bold with fashion 
-            shades and global coloring. Our ammonia-free options ensure healthy, shiny, and beautifully toned hair.
+            At Apsara Salon, our hair colour services are crafted to elevate your look with rich, vibrant, and long-lasting shades. Whether you want global colouring, highlights, balayage, or subtle tones, our experts use premium, damage-free products to ensure a smooth and glossy finish. We carefully customize each colour to match your skin tone and style for a perfectly blended, natural result. Refresh your look with stunning, head-turning colour only at Apsara Salon.
         </p>
     </div>
 </section>
@@ -217,9 +217,7 @@
     <div class="flex">
         <img src="images/colarge/haircut.jpg" alt="Hair Cutting">
         <p>
-            From simple trims to advanced fashion cuts, we offer styles that enhance your personality.  
-            Our stylists specialize in modern trends including layers, feathering, wolf cuts, butterfly cuts, 
-            and bob styles—precise, fresh, and tailored for you.
+            At Apsara Salon, our haircut services are designed to enhance your natural beauty with precision, style, and comfort. Our expert stylists analyze your face shape, hair type, and personal preference to craft a look that suits you perfectly. From trendy layers and sharp bobs to classic trims and professional grooming cuts, we deliver styles that are easy to manage and effortlessly stylish. Step into Apsara Salon for a fresh, confident look that brings out the best in you.
         </p>
     </div>
 </section>
@@ -232,8 +230,7 @@
     <div class="flex reverse">
         <img src="images/colarge/hairtreat.jpg" alt="Hair Treatment Services">
         <p>
-            Nourish your hair with premium treatments like smoothing, keratin, botox, and nanoplastia.  
-            These services reduce frizz, repair damage, enhance shine, and make your hair soft & manageable.
+            At Apsara Salon, we offer advanced hair treatments designed to repair, nourish, and transform your hair from root to tip. Our expert stylists use premium products to treat concerns like frizz, dandruff, dryness, and hair damage while restoring natural shine and strength. From keratin and protein therapies to herbal and deep hair spa rituals, every service is tailored to your hair type for visible, long-lasting results. Step into Apsara Salon and experience healthier, smoother, and more beautiful hair with every treatment.
         </p>
     </div>
 </section>
