--- a/Faq.html
+++ b/Faq.html
@@ -108,7 +108,7 @@
                                 </li>
                                 <li><a href="about-1.html">About us</a>
                                 <!-- <li><a href="about-1.html">About</a></li> -->
-                                <li><a href="services-1.html">Our Services</a>
+                                <li><a href="">Our Services</a>
                                     <ul class="sub-menu">
                                         <li><a href="hairstyling.html">Hair Services</a></li>                                        
                                         <li><a href="nailservice.html">Nail Service</a></li>                                        
@@ -128,7 +128,10 @@
                                         <li><a href="blog-list-sidebar.html">Blog List</a></li>
                                         <li><a href="blog-post-right-sidebar.html">Blog Post</a></li>
                                     </ul>                                 -->
-                                </li>                                                                
+                                </li>     
+                                  <li><a href="contact-1.html">Contact Us</a>
+                                                             
+                                </li>                                                               
                                 <!-- <li>
                                     <a href="javascript:;">Pages</a>
                                     <ul class="sub-menu">
