--- a/blog-grid.html
+++ b/blog-grid.html
@@ -194,7 +194,7 @@ hr {
                                 </li>
                                 <li><a href="about-1.html">About us</a>
                                 <!-- <li><a href="about-1.html">About</a></li> -->
-                                <li><a href="services-1.html">Our Services</a>
+                                <li><a href="">Our Services</a>
                                     <ul class="sub-menu">
                                         <li><a href="hairstyling.html">Hair Services</a></li>                                        
                                         <li><a href="nailservice.html">Nail Service</a></li>                                        
@@ -214,7 +214,10 @@ hr {
                                         <li><a href="blog-list-sidebar.html">Blog List</a></li>
                                         <li><a href="blog-post-right-sidebar.html">Blog Post</a></li>
                                     </ul>                                 -->
-                                </li>                                                                
+                                </li>        
+                                <li><a href="contact-1.html">Contact Us</a>
+                                                             
+                                </li>                                                         
                                 <!-- <li>
                                     <a href="javascript:;">Pages</a>
                                     <ul class="sub-menu">
@@ -243,7 +246,7 @@ hr {
         <div class="page-content">
         
             <!-- INNER PAGE BANNER -->
-            <div class="wt-bnr-inr overlay-wraper bg-center" style="background-image:url(images/banner/9.jpg);">
+            <div class="wt-bnr-inr overlay-wraper bg-center" style="background-image:url(images/banner/menubanner.jpg);">
             	<div class="overlay-main site-bg-secondry opacity-07"></div>
                 <div class="container">
                     <div class="wt-bnr-inr-entry">
@@ -520,7 +523,7 @@ hr {
     <h1 class="title">PRICES</h1>
 
     <div class="price-banner">
-        <h2>FIXED</h2>
+        <h2 style="color: #fff;">FIXED</h2>
         <p>UNMATCHED. FOR YOU.</p>
     </div>
 
