--- a/threading.html
+++ b/threading.html
@@ -251,7 +251,7 @@
 
 
 <!-- WHY CHOOSE US -->
-  <div class="why-container pt-2 pb-4">
+  <div class="why-container p-4">
     <h2 class="why-title">Why Choose Us</h2>
 
     <div class="why-grid">
