--- a/waxingservice.html
+++ b/waxingservice.html
@@ -275,7 +275,7 @@
 </section>
 
 <!-- WHY CHOOSE US -->
-  <div class="why-container pt-2 pb-4">
+  <div class="why-container p-4">
     <h2 class="why-title">Why Choose Us</h2>
 
     <div class="why-grid">
