--- a/contact-1.html
+++ b/contact-1.html
@@ -158,7 +158,7 @@
         <div class="page-content">
         
             <!-- INNER PAGE BANNER -->
-            <div class="wt-bnr-inr overlay-wraper bg-center" style="background-image:url(images/banner/contactbanner.jpg);">
+            <div class="wt-bnr-inr overlay-wraper bg-center" style="background-image:url(images/banner/serbanner.jpg);">
             	<div class="overlay-main site-bg-secondry opacity-07"></div>
                 <div class="container">
                     <div class="wt-bnr-inr-entry">
