--- a/nailservice.html
+++ b/nailservice.html
@@ -197,7 +197,7 @@
         <!-- Card 1 -->
         <div class="nail-card">
             <div class="nail-img">
-                <img src="images/home/pedicure1.jpg" alt="">
+                <img src="images/colarge/basicpedi.jpg" alt="">
             </div>
             <div class="nail-content">
                 <h3>Basic Pedicure</h3>
@@ -208,7 +208,7 @@
         <!-- Card 2 -->
         <div class="nail-card">
             <div class="nail-img">
-                <img src="https://images.unsplash.com/photo-1522335789203-aabd1fc54bc9?w=1000" alt="">
+                <img src="images/colarge/spapedi.jpeg" alt="">
             </div>
             <div class="nail-content">
                 <h3>Spa Pedicure</h3>
@@ -219,7 +219,7 @@
         <!-- Card 3 -->
         <div class="nail-card">
             <div class="nail-img">
-                <img src="images/home/pedicure4.jpg" alt="">
+                <img src="images/colarge/parapedi.jpeg" alt="">
             </div>
             <div class="nail-content">
                 <h3>Paraffin Pedicure</h3>
@@ -230,7 +230,7 @@
         <!-- Card 4 -->
         <div class="nail-card">
             <div class="nail-img">
-                <img src="images/home/pedicure5.jpg" alt="">
+                <img src="images/colarge/aropedi.jpeg" alt="">
             </div>
             <div class="nail-content">
                 <h3>Aroma Pedicure</h3>
@@ -241,7 +241,7 @@
         <!-- Card 5 -->
         <div class="nail-card">
             <div class="nail-img">
-                <img src="images/home/pedicure2.jpg" alt="">
+                <img src="images/colarge/premipedi.jpeg" alt="">
             </div>
             <div class="nail-content">
                 <h3>Premium Pedicure</h3>
@@ -252,7 +252,7 @@
         <!-- Card 6 -->
         <div class="nail-card">
             <div class="nail-img">
-                <img src="images/home/pedicure3.jpg" alt="">
+                <img src="images/colarge/bripedi.jpg" alt="">
             </div>
             <div class="nail-content">
                 <h3>Brightening Pedicure</h3>
@@ -263,7 +263,7 @@
         <!-- Card 7 -->
         <div class="nail-card">
             <div class="nail-img">
-                <img src="images/home/menicure.jpg" alt="">
+                <img src="images/colarge/basicmeni.jpg" alt="">
             </div>
             <div class="nail-content">
                 <h3>Basic Manicure</h3>
@@ -274,7 +274,7 @@
         <!-- Card 8 -->
         <div class="nail-card">
             <div class="nail-img">
-                <img src="images/home/medicure1.jpg" alt="">
+                <img src="images/colarge/spamedi.jpg" alt="">
             </div>
             <div class="nail-content">
                 <h3>Spa Manicure</h3>
