--- a/facial.html
+++ b/facial.html
@@ -421,7 +421,7 @@
 
 
 <!-- LOADING AREA START ===== -->
-<div class="loading-area">
+<!-- <div class="loading-area">
     <div class="loading-box"></div>
     <div class="loading-pic">
         <div class="cssload-loader">
@@ -438,7 +438,7 @@
             </div>
         </div>	
     </div>
-</div>
+</div> -->
 <!-- LOADING AREA  END ====== -->
 
 <!-- JAVASCRIPT  FILES ========================================= --> 
