--- a/index.html
+++ b/index.html
@@ -2262,7 +2262,7 @@ you a unique result. We will provide you with the highest quality of our service
  	</div>
 
 <!-- LOADING AREA START ===== -->
-<div class="loading-area">
+<!-- <div class="loading-area">
     <div class="loading-box"></div>
     <div class="loading-pic">
         <div class="cssload-loader">
@@ -2279,7 +2279,7 @@ you a unique result. We will provide you with the highest quality of our service
             </div>
         </div>	
     </div>
-</div>
+</div> -->
 <!-- LOADING AREA  END ====== -->
 
 <!-- JAVASCRIPT  FILES ========================================= --> 
