--- a/about-1.html
+++ b/about-1.html
@@ -967,7 +967,7 @@ you a unique result. We will provide you with the highest quality of our service
     </div>
 
 <!-- LOADING AREA START ===== -->
-<div class="loading-area">
+<!-- <div class="loading-area">
     <div class="loading-box"></div>
     <div class="loading-pic">
         <div class="cssload-loader">
@@ -984,7 +984,7 @@ you a unique result. We will provide you with the highest quality of our service
             </div>
         </div>	
     </div>
-</div>
+</div> -->
 <!-- LOADING AREA  END ====== -->
 
 <!-- JAVASCRIPT  FILES ========================================= --> 
