--- a/massage&wellness.html
+++ b/massage&wellness.html
@@ -449,7 +449,7 @@
     </div>
 
 <!-- LOADING AREA START ===== -->
-<div class="loading-area">
+<!-- <div class="loading-area">
     <div class="loading-box"></div>
     <div class="loading-pic">
         <div class="cssload-loader">
@@ -466,7 +466,7 @@
             </div>
         </div>	
     </div>
-</div>
+</div> -->
 <!-- LOADING AREA  END ====== -->
 
 <!-- JAVASCRIPT  FILES ========================================= --> 
