--- a/nailservice.html
+++ b/nailservice.html
@@ -426,7 +426,7 @@
     </div>
 
 <!-- LOADING AREA START ===== -->
-<div class="loading-area">
+<!-- <div class="loading-area">
     <div class="loading-box"></div>
     <div class="loading-pic">
         <div class="cssload-loader">
@@ -443,7 +443,7 @@
             </div>
         </div>	
     </div>
-</div>
+</div> -->
 <!-- LOADING AREA  END ====== -->
 
 <!-- JAVASCRIPT  FILES ========================================= --> 
