--- a/services-1.html
+++ b/services-1.html
@@ -578,7 +578,7 @@
     </div>
 
 <!-- LOADING AREA START ===== -->
-<div class="loading-area">
+<!-- <div class="loading-area">
     <div class="loading-box"></div>
     <div class="loading-pic">
         <div class="cssload-loader">
@@ -595,7 +595,7 @@
             </div>
         </div>	
     </div>
-</div>
+</div> -->
 <!-- LOADING AREA  END ====== -->
 
 <!-- JAVASCRIPT  FILES ========================================= --> 
