--- a/error-404.html
+++ b/error-404.html
@@ -286,6 +286,22 @@
         
     </div>
 
+       <!--whatapp icon-->
+    <a href="https://wa.me/919916988766"
+   target="_blank"
+   class="wa-float">
+
+  <!-- Transparent WhatsApp SVG Icon -->
+  <svg viewBox="0 0 24 24">
+    <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.472-.149-.67.149-.198.297-.768.967-.94 1.165-.173.198-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.521.149-.173.198-.298.298-.497.099-.198.05-.372-.025-.521-.075-.148-.669-1.611-.916-2.207-.242-.579-.487-.501-.67-.51l-.57-.01c-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.095 3.2 5.077 4.487.71.306 1.263.489 1.694.626.712.227 1.36.195 1.872.118.571-.085 1.758-.718 2.007-1.413.248-.695.248-1.29.173-1.413-.074-.124-.272-.198-.57-.347z"
+          fill="white"/>
+    <path d="M20.52 3.48A11.94 11.94 0 0 0 12 0C5.373 0 .12 5.253.12 11.88c0 
+      2.118.558 4.178 1.611 6.018L0 24l6.305-1.654a11.86 11.86 0 0 0 
+      5.667 1.46h.028c6.627 0 11.88-5.253 11.88-11.88 0-3.18-1.243-6.166-3.96-8.345z"
+          fill="white" opacity="0.2"/>
+  </svg>
+</a>
+
 <!-- LOADING AREA START ===== -->
 <!-- <div class="loading-area">
     <div class="loading-box"></div>
